// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Flex renders a Flex 1`] = `
<div>
  <div
    class="css-pl04m9"
  >
    Flex
  </div>
</div>
`;

exports[`components/Flex renders a Flex with props 1`] = `
<div>
  <div
    class="css-18cthkh"
  >
    FlexWithProps
  </div>
</div>
`;
